--- a/.godot/editor/project_metadata.cfg
+++ b/.godot/editor/project_metadata.cfg
@@ -16,3 +16,7 @@ scripts=["res://script1.gd"]
 
 Node2D:scale=true
 Sprite2D:scale=true
+
+[dialog_bounds]
+
+project_settings=Rect2(540, 200, 1800, 1400)
