--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -3,15 +3,11 @@
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 10,
+"column": 9,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 10,
+"row": 15,
 "scroll_position": 0.0,
-"selection": true,
-"selection_from_column": 10,
-"selection_from_line": 10,
-"selection_to_column": 19,
-"selection_to_line": 10,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
