--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -19,26 +19,27 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://PhoneOutline.png")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://")
+<<<<<<<HEADdock_filesystem_selected_paths=PackedStringArray("res://DrivingScripts/Car.gd")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://DrivingScripts/")
+dock_filesystem_selected_paths=PackedStringArray("res://node_2d.tscn")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://node_2d.tscn")
-current_scene="res://node_2d.tscn"
+open_scenes=PackedStringArray()
+current_scene=""
 center_split_offset=0
-selected_default_debugger_tab_idx=0
-selected_main_editor_idx=0
 selected_bottom_panel_item=0
+selected_default_debugger_tab_idx=0
+selected_main_editor_idx=1
 
 [ScriptEditor]
 
-open_scripts=["res://script1.gd"]
-selected_script="res://script1.gd"
-open_help=[]
+open_scripts=["res://DrivingScripts/Car.gd", "res://DrivingScripts/CharacterCar.gd", "res://Platformer.gd", "res://script1.gd"]
+selected_script="res://DrivingScripts/CharacterCar.gd"
+open_help=["PathFollow2D", "SubViewport", "TileMap"]
 script_split_offset=140
 list_split_offset=0
 
