--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -19,8 +19,8 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://PhoneOutline.png")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://")
+dock_filesystem_selected_paths=PackedStringArray("res://DrivingScripts/CharacterCar.gd")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://DrivingScripts/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
@@ -36,8 +36,8 @@ selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://script1.gd"]
-selected_script="res://script1.gd"
+open_scripts=["res://DrivingScripts/Car1.gd", "res://DrivingScripts/Car2.gd", "res://DrivingScripts/Car3.gd", "res://DrivingScripts/CharacterCar.gd", "res://script1.gd"]
+selected_script="res://DrivingScripts/CharacterCar.gd"
 open_help=[]
 script_split_offset=140
 list_split_offset=0
