Started Street Fight(SF) script and node

--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -12,15 +12,15 @@ dock_floating={}
 dock_split_2=0
 dock_split_3=0
 dock_hsplit_1=0
-dock_hsplit_2=540
+dock_hsplit_2=402
 dock_hsplit_3=-540
 dock_hsplit_4=0
 dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://DrivingScripts/CharacterCar.gd")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://DrivingScripts/")
+dock_filesystem_selected_paths=PackedStringArray("res://Art Assets/")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
@@ -31,14 +31,14 @@ open_scenes=PackedStringArray("res://node_2d.tscn")
 current_scene="res://node_2d.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=0
+selected_main_editor_idx=2
 selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://DrivingScripts/Car1.gd", "res://DrivingScripts/Car2.gd", "res://DrivingScripts/Car3.gd", "res://DrivingScripts/CharacterCar.gd", "res://script1.gd"]
-selected_script="res://DrivingScripts/CharacterCar.gd"
-open_help=[]
+open_scripts=["res://script1.gd", "res://SF_Player.gd", "res://StreetFight.gd"]
+selected_script="res://StreetFight.gd"
+open_help=["Node"]
 script_split_offset=140
 list_split_offset=0
 
