--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -31,13 +31,13 @@ open_scenes=PackedStringArray("res://node_2d.tscn")
 current_scene="res://node_2d.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=2
+selected_main_editor_idx=0
 selected_bottom_panel_item=0
 
 [ScriptEditor]
 
 open_scripts=["res://Platformer.gd", "res://script1.gd"]
-selected_script="res://Platformer.gd"
+selected_script="res://script1.gd"
 open_help=[]
 script_split_offset=140
 list_split_offset=0
