New Main branch

--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -36,8 +36,8 @@ selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://script1.gd", "res://SF_Player.gd", "res://StreetFight.gd"]
-selected_script="res://StreetFight.gd"
+open_scripts=["res://script1.gd", "res://StreetFight.gd"]
+selected_script="res://script1.gd"
 open_help=["Node"]
 script_split_offset=140
 list_split_offset=0
