--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -19,7 +19,7 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://StreetFight.gd")
+dock_filesystem_selected_paths=PackedStringArray("res://Art Assets/")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://")
 dock_3="Scene,Import"
 dock_4="FileSystem"
@@ -36,8 +36,8 @@ selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://DrivingScripts/Car1.gd", "res://DrivingScripts/Car2.gd", "res://DrivingScripts/Car3.gd", "res://DrivingScripts/CharacterCar.gd", "res://script1.gd", "res://StreetFightScripts/StreetFight.gd", "res://StreetFight.gd"]
-selected_script="res://StreetFight.gd"
+open_scripts=["res://script1.gd", "res://StreetFight.gd"]
+selected_script="res://script1.gd"
 open_help=["Node"]
 script_split_offset=140
 list_split_offset=0
