--- a/.godot/editor/project_metadata.cfg
+++ b/.godot/editor/project_metadata.cfg
@@ -1,6 +1,7 @@
 [editor_metadata]
 
 executable_path="/private/var/folders/rn/_6vys45n05x64c039zmm637m0000gp/T/AppTranslocation/05EA3369-1377-4497-B352-78751BFDEC9B/d/Godot 2.app/Contents/MacOS/Godot"
+use_advanced_connections=false
 
 [debug_options]
 
