Street fight health and comments

--- a/.godot/editor/project_metadata.cfg
+++ b/.godot/editor/project_metadata.cfg
@@ -19,6 +19,7 @@ Sprite2D:scale=true
 MultiNodeEdit:scale=true
 CollisionShape2D:scale=true
 CharacterBody2D:scale=true
+ProgressBar:scale=true
 
 [dialog_bounds]
 
