Attached signal to street fight

--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -4,7 +4,7 @@ dock_1_selected_tab_idx=0
 dock_2_selected_tab_idx=0
 dock_3_selected_tab_idx=0
 dock_4_selected_tab_idx=0
-dock_5_selected_tab_idx=1
+dock_5_selected_tab_idx=0
 dock_6_selected_tab_idx=0
 dock_7_selected_tab_idx=0
 dock_8_selected_tab_idx=0
@@ -37,7 +37,7 @@ selected_bottom_panel_item=0
 [ScriptEditor]
 
 open_scripts=["res://DrivingScripts/Car1.gd", "res://DrivingScripts/Car2.gd", "res://DrivingScripts/Car3.gd", "res://DrivingScripts/CharacterCar.gd", "res://script1.gd", "res://StreetFight.gd"]
-selected_script="res://StreetFight.gd"
+selected_script="res://script1.gd"
 open_help=["Node"]
 script_split_offset=140
 list_split_offset=0
