--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -4,7 +4,7 @@ dock_1_selected_tab_idx=0
 dock_2_selected_tab_idx=0
 dock_3_selected_tab_idx=0
 dock_4_selected_tab_idx=0
-dock_5_selected_tab_idx=1
+dock_5_selected_tab_idx=0
 dock_6_selected_tab_idx=0
 dock_7_selected_tab_idx=0
 dock_8_selected_tab_idx=0
@@ -19,7 +19,7 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://icon.svg")
+dock_filesystem_selected_paths=PackedStringArray("res://StreetFight.gd")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://")
 dock_3="Scene,Import"
 dock_4="FileSystem"
@@ -36,7 +36,7 @@ selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://script1.gd", "res://StreetFight.gd"]
+open_scripts=["res://DrivingScripts/Car1.gd", "res://DrivingScripts/Car2.gd", "res://DrivingScripts/Car3.gd", "res://DrivingScripts/CharacterCar.gd", "res://script1.gd", "res://StreetFight.gd"]
 selected_script="res://StreetFight.gd"
 open_help=["Node"]
 script_split_offset=140
