--- a/.godot/editor/project_metadata.cfg
+++ b/.godot/editor/project_metadata.cfg
@@ -26,7 +26,12 @@ ProgressBar:scale=true
 
 project_settings=Rect2(462, 106, 1800, 1400)
 create_new_node=Rect2(540, 200, 1800, 1400)
+search_help=Rect2(480, 270, 960, 540)
 
 [script_setup]
 
 last_selected_language="GDScript"
+
+[color_picker]
+
+recent_presets=PackedColorArray(0.577008, 0.577008, 0.577008, 1, 0.964851, 0.321558, 0.305438, 1, 0.793361, 0.147295, 0.167758, 1, 0.822824, 0, 0.180013, 1, 0.827354, 0, 0.0807425, 1, 0.861923, 0, 0.0860608, 1)
