--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -4,7 +4,7 @@ dock_1_selected_tab_idx=0
 dock_2_selected_tab_idx=0
 dock_3_selected_tab_idx=0
 dock_4_selected_tab_idx=0
-dock_5_selected_tab_idx=0
+dock_5_selected_tab_idx=1
 dock_6_selected_tab_idx=0
 dock_7_selected_tab_idx=0
 dock_8_selected_tab_idx=0
@@ -19,8 +19,8 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://StreetFight.gd")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://")
+dock_filesystem_selected_paths=PackedStringArray()
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://DrivingScripts/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
@@ -36,8 +36,8 @@ selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://DrivingScripts/Car1.gd", "res://DrivingScripts/Car2.gd", "res://DrivingScripts/Car3.gd", "res://DrivingScripts/CharacterCar.gd", "res://script1.gd", "res://StreetFight.gd"]
-selected_script="res://StreetFight.gd"
+open_scripts=["res://DrivingScripts/CharacterCar.gd", "res://DrivingScripts/Driving.gd", "res://script1.gd", "res://StreetFight.gd"]
+selected_script="res://DrivingScripts/Driving.gd"
 open_help=["Node"]
 script_split_offset=140
 list_split_offset=0
