--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -12,14 +12,14 @@ dock_floating={}
 dock_split_2=0
 dock_split_3=0
 dock_hsplit_1=0
-dock_hsplit_2=402
+dock_hsplit_2=393
 dock_hsplit_3=-540
 dock_hsplit_4=0
 dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray()
+dock_filesystem_selected_paths=PackedStringArray("res://")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://DrivingScripts/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
@@ -27,7 +27,7 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://node_2d.tscn", "res://platformer.tscn")
+open_scenes=PackedStringArray("res://node_2d.tscn")
 current_scene="res://node_2d.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=0
@@ -37,7 +37,7 @@ selected_bottom_panel_item=0
 [ScriptEditor]
 
 open_scripts=["res://DrivingScripts/CharacterCar.gd", "res://DrivingScripts/Driving.gd", "res://script1.gd", "res://StreetFight.gd"]
-selected_script="res://DrivingScripts/Driving.gd"
+selected_script="res://DrivingScripts/CharacterCar.gd"
 open_help=["Node"]
 script_split_offset=140
 list_split_offset=0
